# notedeck

./: Cargo.toml
.github/workflows/: rust.yml
crates/enostr/: Cargo.toml
crates/enostr/src/: lib.rs
crates/enostr/src/relay/: message.rs  mod.rs  pool.rs
crates/enostr/src/relay/webrtc/: README.md  heartbeat.rs  mod.rs  mutual_follows.rs  peer_connection.rs  signaling.rs  stun_server.rs
crates/nostr-double-ratchet/: Cargo.toml
crates/nostr-double-ratchet/src/: error.rs  invite.rs  lib.rs  pubsub.rs  session.rs  session_manager.rs  types.rs  user_record.rs  utils.rs
crates/nostr-double-ratchet/tests/: advanced_test.rs  dual_notedeck_test.rs  integration_test.rs  invite_listen_test.rs  invite_test.rs  out_of_order_test.rs  relay_integration_test.rs  session_manager_notedeck_test.rs  session_test.rs
crates/nostr-social-graph/: Cargo.toml
crates/nostr-social-graph/src/: error.rs  lib.rs  social_graph.rs  unique_ids.rs
crates/nostr-social-graph/tests/: social_graph_test.rs
crates/notedeck/: Cargo.toml
crates/notedeck/src/: app.rs  args.rs  blossom.rs  context.rs  event_broker.rs  imgcache.rs  lib.rs
crates/notedeck/src/account/: accounts.rs  relay.rs
crates/notedeck/src/media/: action.rs  images.rs
crates/notedeck/src/note/: mod.rs
crates/notedeck/src/persist/: settings_handler.rs
crates/notedeck_clndash/src/: ui.rs
crates/notedeck_columns/: Cargo.toml
crates/notedeck_columns/src/: app.rs  column.rs  lib.rs  media_upload.rs  nav.rs  route.rs  subscriptions.rs  webrtc_coordinator.rs
crates/notedeck_columns/src/accounts/: mod.rs
crates/notedeck_columns/src/ui/: accounts.rs  chat.rs  mentions_picker.rs  messages.rs  mod.rs  new_chat.rs  post.rs  profile_search_dropdown.rs  relay.rs  settings.rs  side_panel.rs  thread.rs  timeline.rs  widgets.rs
crates/notedeck_columns/src/ui/column/: header.rs
crates/notedeck_columns/src/ui/note/: post.rs  reply.rs
crates/notedeck_columns/src/ui/profile/: contacts_list.rs  mod.rs
crates/notedeck_columns/src/ui/search/: mod.rs  state.rs
crates/notedeck_columns/tests/: app_test.rs
crates/notedeck_dave/src/: tools.rs
crates/notedeck_dave/src/ui/: dave.rs
crates/notedeck_ui/: Cargo.toml
crates/notedeck_ui/src/: lib.rs  username.rs  wot_badge.rs
crates/notedeck_ui/src/note/: contents.rs  media.rs  mod.rs  reply_description.rs
crates/notedeck_ui/src/profile/: picture.rs
