[package]
name = "enostr"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ewebsock = { version = "0.8.0", features = ["tls"] }
serde_derive = { workspace = true }
serde = { workspace = true, features = ["derive"] } # You only need this if you want app persistence
serde_json = { workspace = true }
nostr = { workspace = true }
bech32 = { workspace = true }
nostrdb = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
mio = { workspace = true }
tokio = { workspace = true }
tokenator = { workspace = true }
hashbrown = { workspace = true }
bytes = "1.10"
uuid = { workspace = true }

# WebRTC dependencies
webrtc = { workspace = true }
webrtc-data = { workspace = true }
webrtc-ice = { workspace = true }
stun = { workspace = true }
sdp = { workspace = true }
webrtc-util = { workspace = true }
interceptor = { workspace = true }
parking_lot = { workspace = true }