[package]
name = "nostr-double-ratchet"
version = "0.1.0"
edition = "2021"
authors = ["Martti Malmi"]
license = "MIT"
description = "Nostr double ratchet library for Rust"
repository = "https://github.com/damus-io/notedeck"

[dependencies]
enostr = { path = "../enostr" }
nostrdb = { workspace = true }
nostr = { workspace = true, features = ["nip44"] }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hkdf = "0.12"
sha2 = "0.10"
hex = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
urlencoding = "2.1"
rand = { workspace = true }
crossbeam-channel = "0.5"
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
